# rsbr

./: Cargo.toml  LICENSE  README.md  rsbrrc.toml
.github/workflows/: build.yml
src/: config.rs  hexcolor.rs  icons.rs  main.rs
src/property/: audio.rs  battery.rs  brightness.rs  datetime.rs  mod.rs  network.rs
