[package]
name = "rsbr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.79"
battery = "0.7.8"
brightness = "0.5.0"
chrono = "0.4.33"
dirs = "5.0.1"
futures-util = "0.3.30"
getopts = "0.2.21"
hex = "0.4.3"
regex = "1.10.3"
serde = "1.0.196"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
x11rb = "0.13.0"
